# wowmapviewer

./: .gitignore  README.linux  README.win.txt
src/: .gitignore  CMakeLists.txt  CMakeLists_clean.txt  Makefile  animated.h  appstate.h  areadb.cpp  areadb.h  dbcfile.cpp  dbcfile.h  ddslib.cpp  font.cpp  liquid.cpp  liquid.h  maptile.cpp  maptile.h  matrix.h  menu.cpp  model.cpp  model.h  modelheaders.h  mpq.h  mpq_stormlib.cpp  mpq_stormlib.h  particle.cpp  particle.h  shaders.cpp  shaders.h  sky.cpp  sky.h  test.cpp  util.cpp  util.h  video.cpp  video.h  wmo.cpp  wmo.h  world.cpp  world.h  wowmapview.cpp  (+4 more)
src/Release32/: _IsIncrementalBuild  wowmapview.exe.recipe
src/Release32/wowmapview.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  wowmapview.lastbuildstate
src/SDL/VisualC/SDL/: SDL.vcproj  SDL.vcxproj
src/SDL/VisualC/SDLmain/: SDLmain.vcxproj
src/SDL/src/main/win32/: version.rc
src/SDL_old/VisualC/SDL/: SDL.vcxproj
src/SDL_old/VisualC/SDLmain/: SDLmain.vcxproj
src/stormlib/: CMakeLists.txt  CMakeLists_clean.txt  Makefile.linux  StormLib.sln  StormLib.vcproj  StormLib.vcxproj  StormLib_dll.vcxproj  Storm_dll.vcproj  Storm_dll.vcxproj  makefile.w32
src/stormlib/src/: SFileCreateArchiveEx.cpp  StormLib.h  StormPortLinux.cpp
terrain/: mymenu.cc  mymenu.h  terrain.cc  terrain.vcxproj
